--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 #--------------------directories-----
-dir.archivo.contables = G:/COSAS DE AQUISPE/SEGUROS GANADERO/ARCHIVOS CONTABLES-2
+dir.archivo.contables = G:/TEMPLATES
 
 #--------------------api ERP------
 api.base.erp = https://sap.ganaseguros.com.bo/Ganaseguros/api
